--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-  <input p="Accio ipsum text">
+  <input placeholder="Accio ipsum text">
 	
 </body>
 
